--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,7 @@
         <a href="https://chainlist.org" target="_blank">chainlist.org</a> and
         <a href="https://chainid.network" target="_blank">chainid.network</a>.
     </p>
+    <p><a href="https://1rpc.dev" target="_blank">1rpc</a> is a public gateway, but you can deploy your own as well.</p>
     <p>
         Learn more on <a href="https://github.com/huahuayu/onerpc" target="_blank">GitHub</a>.
     </p>
